[package]
name = "zeta-hash"
version = "0.1.0"
edition = "2021"
description = "Lightweight CLI and library for hashing with SHA256, Keccak256, and Blake3"
license = "MIT"

[dependencies]
rand = "0.8"
sha2 = "0.10"
tiny-keccak = "2.0"
blake3 = "1.5"
hex = "0.4"
clap = { version = "4.1", features = ["derive"] }